#12 Fix alignment of canvas and sidebars.

--- a/client/src/scss/components/Process/_canvas.scss
+++ b/client/src/scss/components/Process/_canvas.scss
@@ -1,7 +1,6 @@
 .canvas {
     width: 100%;
     min-height: 100vh;
-    overflow-y: auto;
 
     .canvas--widget-wrapper {
         width: 100%;
