--- a/client/src/scss/components/_managementSidebar.scss
+++ b/client/src/scss/components/_managementSidebar.scss
@@ -7,11 +7,12 @@
         height: 100vh;
         overflow: hidden;
         background-color: theme-color("grey");
+        position: sticky;
+        top: 0;
 
         .management-sidebar--content {
             position: relative;
             height: 100%;
-            right: -15px;
             padding: $spacer;
             overflow-y: scroll;
         }
